splash, welcome, phone in progress

--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -1,3 +1,12 @@
 {
-    "loginTitle": "שלום"
+    "action_continue": "המשך",
+    "policy" : {
+        "terms":"כניסה לאפליקציה מהווה אישור ",
+        "link": "לתנאי השימוש",
+        "prefix": " שלנו"
+    },
+    "onboarding" : {
+        "phoneTitle" : "כדי להתחבר לקבוצות הצ׳אט אנחנו\nצריכים את מספר הטלפון שלך",
+        "phoneSubtitle" : "מה מספר הטלפון שלך?"
+    }
 }
