splash onboarding routing

--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -15,6 +15,8 @@
         "profile_age" : "גיל",
         "profile_female" : "אישה",
         "profile_male" : "גבר",
-        "profile_other" : "אחר"
+        "profile_other" : "אחר",
+        "wrong_name" : "אנא ציין שם ושם משפחה",
+        "wrong_age" : ""
     }
 }
