--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -28,7 +28,8 @@
         "groupNameDescription": "בחר/י נושא לקבוצה החדשה. כדאי להוסיף גם אייקון.",
         "groupNameAppbarTitle": "נושא הקבוצה",
         "groupSelectCategoryAppbarTitle": "בחר/י קטגוריה",
-        "groupSelectContactAppbarTitle": "בחר/י משתתפים לקבוצה"
+        "groupSelectContactAppbarTitle": "בחר/י משתתפים לקבוצה",
+        "newGroupTitle" : "יצירת קבוצה חדשה"
     },
     "chat": {
         "messageInputHint": "הקלד/י הודעה"
