welcome popup upload photo

--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -6,7 +6,8 @@
         "prefix": " שלנו"
     },
     "general": {
-        "server_error": "תקלה בשרת, אנא נסה שנית"
+        "server_error": "תקלה בשרת, אנא נסה שנית",
+        "iGotIt": "הבנתי, תודה!"
     },
     "onboarding": {
         "phoneTitle": "כדי להתחבר לקבוצות הצ׳אט אנחנו\nצריכים את מספר הטלפון שלך",
@@ -29,7 +30,11 @@
         "groupNameAppbarTitle": "נושא הקבוצה",
         "groupSelectCategoryAppbarTitle": "בחר/י קטגוריה",
         "groupSelectContactAppbarTitle": "בחר/י משתתפים לקבוצה",
-        "newGroupTitle" : "יצירת קבוצה חדשה"
+        "newGroupTitle": "יצירת קבוצה חדשה"
+    },
+    "welcome": {
+        "title": "ברוכים הבאים לאייקון",
+        "content": "קבוצת הצ׳אט שלנו מנוהלת על ידי האייקונים עצמם, אשר כותבים ומובילים את התוכן שאתם\nצופים בו באפליקציה, מצ׳וטטים, מצלמים\nתמונות וסרטונים ומקליטים את קולם כדי שתשמעו אותם\n\nמהיום, שוייכת לקבוצות האייקונים האהובה עליך.\nביכולתך להשפיע על ההודעות בצ׳אט באמצעות,\nמלחיצה על פרצופונים ורגשונים, כך שהם יוכלו לדעת כמה אהבה ותמיכה הם מקבלים ממך."
     },
     "chat": {
         "messageInputHint": "הקלד/י הודעה"
