--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -31,7 +31,8 @@
         "categoriesSubtitle": "בחר/י קטגוריה",
         "iconSubtitle": "בחר/י משתתפים לקבוצה",
         "newGroupTitle": "יצירת קבוצה חדשה",
-        "iconValidation" : "יש לבחור יותר ממשתתף אחד"
+        "iconValidation" : "יש לבחור יותר מאייקון אחד",
+        "categoryValidation" : "יש לבחור יותר מקטגוריה אחת"
     },
     "welcome": {
         "title": "ברוכים הבאים לאייקון",
