--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -1,5 +1,6 @@
 {
     "action_continue": "המשך",
+    "action_save": "שמור",
     "policy": {
         "terms": "כניסה לאפליקציה מהווה אישור ",
         "link": "לתנאי השימוש",
@@ -32,7 +33,9 @@
         "iconSubtitle": "בחר/י משתתפים לקבוצה",
         "newGroupTitle": "יצירת קבוצה חדשה",
         "iconValidation": "יש לבחור יותר מאייקון אחד",
-        "categoryValidation": "יש לבחור יותר מקטגוריה אחת"
+        "categoryValidation": "יש לבחור יותר מקטגוריה אחת",
+        "addUser": "הוספת משתתף",
+        "chooseUserToGroup": "בחר/י משתתף לקבוצה"
     },
     "welcome": {
         "title": "ברוכים הבאים לאייקון",
