--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -8,6 +8,9 @@
         "prefix": " שלנו",
         "title" : "תנאי שימוש"
     },
+    "search" : {
+        "empty_state" : "לא מצאנו את מה שחיפשת\nנסה/י להקליד משהו אחר"
+    },
     "general": {
         "server_error": "תקלה בשרת, אנא נסה שנית",
         "iGotIt": "הבנתי, תודה!"
