--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -44,7 +44,7 @@
     },
     "welcome": {
         "title": "ברוכים הבאים לאייקון",
-        "content": "קבוצת הצ׳אט שלנו מנוהלת על ידי האייקונים עצמם, אשר כותבים ומובילים את התוכן שאתם\nצופים בו באפליקציה, מצ׳וטטים, מצלמים\nתמונות וסרטונים ומקליטים את קולם כדי שתשמעו אותם\n\nמהיום, שוייכת לקבוצות האייקונים האהובה עליך.\nביכולתך להשפיע על ההודעות בצ׳אט באמצעות,\nמלחיצה על פרצופונים ורגשונים, כך שהם יוכלו לדעת כמה אהבה ותמיכה הם מקבלים ממך."
+        "content": "ברוך הבא ל-Icon! אצלנו תהיה חלק מקהילות\nועולמות תוכן המדברים אליך. קבוצות הצ'אט שלנו מנוהלות\nעל ידי אייקונים, מובילי דעה ויוצרי תוכן המובילים בתחומם\nהקהל הרחב יוכל לצפות בשיחות המתקיימות 24/7 ולהגיב באמצעות חייכנים. מנהל הקבוצה יוכל לפתוח את הקבוצה לשילוב הקהל בשיחה כשיבחר. מהיום אתה חלק מקבוצות האייקונים האהובים עליך."
     },
     "chat": {
         "messageInputHint": "הקלד/י הודעה",
@@ -55,3 +55,4 @@
         "content": "אנחנו נתגעגע אלייך, {} {} {} רוצה לצאת מכל הצ׳אטים שלך?"
     }
 }
+ 
