--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -6,14 +6,17 @@
         "terms": "כניסה לאפליקציה מהווה אישור ",
         "link": "לתנאי השימוש",
         "prefix": " שלנו",
-        "title" : "תנאי שימוש"
+        "title": "תנאי שימוש"
     },
-    "search" : {
-        "empty_state" : "לא מצאנו את מה שחיפשת\nנסה/י להקליד משהו אחר"
+    "search": {
+        "empty_state": "לא מצאנו את מה שחיפשת\nנסה/י להקליד משהו אחר"
     },
     "general": {
         "server_error": "תקלה בשרת, אנא נסה שנית",
         "iGotIt": "הבנתי, תודה!"
+    },
+    "home": {
+        "noMessages": "אין הודעות"
     },
     "onboarding": {
         "phoneTitle": "כדי להתחבר לקבוצות הצ׳אט אנחנו\nצריכים את מספר הטלפון שלך",
@@ -48,10 +51,56 @@
     },
     "chat": {
         "messageInputHint": "הקלד/י הודעה",
-        "welcomeTitle" : "ברוך הבא ל {}",
-        "welcomeContent" : "איזה כיף! הצטרפת לקבוצה הראשונה שלך.\nבקבוצות תיחשף לשיחות צ׳אט והודעות בין אייקונים.\nתוכל להגיב להודעות ולסטורי באמצעות חייכנים ואימוג׳ים.\nאתה יכול להצטרף לכל קבוצה שמעניינת אותך ואפילו לבחור לעקוב אחר אייקון ספציפי בקבוצות בהן הוא פעיל.\nאתה נכנס למימד חדש, ודא שהאייקונים ידעו שאתה שם."
+        "welcomeTitle": "ברוך הבא ל {}",
+        "welcomeContent": "איזה כיף! הצטרפת לקבוצה הראשונה שלך.\nבקבוצות תיחשף לשיחות צ׳אט והודעות בין אייקונים.\nתוכל להגיב להודעות ולסטורי באמצעות חייכנים ואימוג׳ים.\nאתה יכול להצטרף לכל קבוצה שמעניינת אותך ואפילו לבחור לעקוב אחר אייקון ספציפי בקבוצות בהן הוא פעיל.\nאתה נכנס למימד חדש, ודא שהאייקונים ידעו שאתה שם.",
+        "background": "שינוי תמונת רקע",
+        "chooseColor": "בחר/י צבע רקע",
+        "notification": "השתקת התראות",
+        "editGroup": "הוספת עורכ/ת לקבוצה",
+        "exited": "יצאת מהקבוצה",
+        "exit": "יציאה מהקבוצה",
+        "becomeManager": "הפוך למנהל/ת",
+        "manager": "מנהל/ת",
+        "addManagers": "ניתן להוסיף עוד {} מנהלים",
+        "groupEditors": "עורכי הקבוצה"
     },
     "disconnect": {
         "content": "אנחנו נתגעגע אלייך, {} {} {} רוצה לצאת מכל הצ׳אטים שלך?"
+    },
+    "alerts": {
+        "empty": "אין תגובות חדשות",
+        "messages": "הודעות",
+        "cleanAll": "נקה הכל"
+    },
+    "settings": {
+        "title": "הגדרות",
+        "friends": "הזמנת חברים",
+        "about": "אודות אייקון"
+    },
+    "story": {
+        "title": "הסיפור שלך",
+        "newStory" : "סיפור חדש",
+        "addExtraMedia" : "העלו תמונה או סרטון נוסף",
+        "addMedia" : "העלו תמונה או סרטון",
+        "uploading" : "מעלה...",
+        "video" : "וידאו"
+
+    },
+    "drawer": {
+        "groupActivity": "נתוני פעילות הקבוצה",
+        "disconnect": "להתנתק",
+        "profile": "הפרופיל שלי"
+    },
+    "dialogs": {
+        "exit": "יציאה מהמערכת",
+        "disconnect": "אני רוצה להתנתק",
+        "dontDisconnect": "התחרטתי אל תנתקו אותי"
+    },
+    "comments": {
+        "noComments": "אין עדיין תגובות",
+        "title": "תגובות",
+        "groupOpened": "קבוצה פתוחה לתגובות",
+        "open": "פתיחה",
+        "close": "סגירה"
     }
 }
