--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -68,7 +68,7 @@
         "content": "אנחנו נתגעגע אלייך, {} {} {} רוצה לצאת מכל הצ׳אטים שלך?"
     },
     "alerts": {
-        "empty": "אין תגובות חדשות",
+        "empty": "אין הודעות חדשות",
         "messages": "הודעות",
         "cleanAll": "נקה הכל"
     },
@@ -101,6 +101,7 @@
         "title": "תגובות",
         "groupOpened": "קבוצה פתוחה לתגובות",
         "open": "פתיחה",
-        "close": "סגירה"
+        "close": "סגירה",
+        "closed" : "תגובות לא פעילות כרגע"
     }
 }
