--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -68,7 +68,7 @@
         "content": "אנחנו נתגעגע אלייך, {} {} {} רוצה לצאת מכל הצ׳אטים שלך?"
     },
     "alerts": {
-        "empty": "אין תגובות חדשות",
+        "empty": "אין הודעות חדשות",
         "messages": "הודעות",
         "cleanAll": "נקה הכל"
     },
