added assets json

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -1,7 +1,7 @@
 {
-    "action_continue": "המשך",
-    "action_save": "שמור",
-    "action_close": "סגור",
+    "action_continue": "Continue",
+    "action_save": "Save",
+    "action_close": "Close",
     "policy": {
         "terms": "כניסה לאפליקציה מהווה אישור ",
         "link": "לתנאי השימוש",
@@ -9,14 +9,23 @@
         "title": "תנאי שימוש"
     },
     "search": {
-        "empty_state": "לא מצאנו את מה שחיפשת\nנסה/י להקליד משהו אחר"
+        "empty_state": "לא מצאנו את מה שחיפשת\nנסה/י להקליד משהו אחר",
+        "showAll": "Show all",
+        "searchCategory": "Search category",
+        "searchIcon": "Search Icon"
     },
     "general": {
-        "server_error": "תקלה בשרת, אנא נסה שנית",
-        "iGotIt": "הבנתי, תודה!"
+        "server_error": "Server error, please try again",
+        "iGotIt": "Got it",
+        "cancel": "Cancel",
+        "uploading" : "Uploading, please wait.",
+        "loading" : "Loading...",
+        "close" : "Close"
     },
     "home": {
-        "noMessages": "אין הודעות"
+        "noMessages": "No Messages",
+        "conversation" : "Conversations",
+        "media" : "Media"
     },
     "onboarding": {
         "phoneTitle": "כדי להתחבר לקבוצות הצ׳אט אנחנו\nצריכים את מספר הטלפון שלך",
@@ -24,14 +33,18 @@
         "enterCode": "הזן/י את הקוד שנשלח אליך ב- SMS",
         "phoneCounting": "הקוד יגיע בעוד {} שניות",
         "phone_tooShort": "אנא הקלד/י מספר טלפון בן 7 ספרות.",
-        "profileName": "שם מלא",
-        "profileAge": "גיל",
-        "profileFemale": "אישה",
-        "profileMale": "גבר",
-        "profileOther": "אחר",
-        "wrongName": "אנא ציין שם ושם משפחה",
+        "profileName": "Full name",
+        "profileAge": "Age",
+        "profileFemale": "Female",
+        "profileMale": "Male",
+        "profileOther": "Other",
+        "wrongName": "Please enter full name",
         "wrongAge": "מעל גיל 10",
-        "wrongCode": "קוד שגוי, אנא נסה שנית"
+        "wrongCode": "Wrong code, please try again",
+        "sendAgainTitle" : "לא קיבלתי את הקוד.",
+        "sendAgain" : "Send again",
+        "fullName" : "Full name",
+        "fullNameValidation" : "Specify first and last name"
     },
     "create": {
         "groupNameHint": "הקלד/י כאן את נושא הקבוצה",
@@ -39,68 +52,99 @@
         "groupNameAppbarTitle": "נושא הקבוצה",
         "categoriesSubtitle": "בחר/י קטגוריה",
         "iconSubtitle": "בחר/י משתתפים לקבוצה",
-        "newGroupTitle": "יצירת קבוצה חדשה",
-        "iconValidation": "יש לבחור יותר מאייקון אחד",
-        "categoryValidation": "יש לבחור יותר מקטגוריה אחת",
-        "addUser": "הוספת משתתף",
-        "chooseUserToGroup": "בחר/י משתתף לקבוצה"
+        "newGroupTitle": "Create new group",
+        "iconValidation": "Please choose more then one Icon",
+        "categoryValidation": "You must choose more then one category",
+        "addUser": "Add a user",
+        "chooseUserToGroup": "Choose a user for the group",
+        "addPhotoMandatory": "Please add your photo"
     },
     "welcome": {
-        "title": "ברוכים הבאים לאייקון",
+        "title": "Welcome to ICON",
         "content": "ברוך הבא ל-Icon! אצלנו תהיה חלק מקהילות\nועולמות תוכן המדברים אליך. קבוצות הצ'אט שלנו מנוהלות\nעל ידי אייקונים, מובילי דעה ויוצרי תוכן המובילים בתחומם\nהקהל הרחב יוכל לצפות בשיחות המתקיימות 24/7 ולהגיב באמצעות חייכנים. מנהל הקבוצה יוכל לפתוח את הקבוצה לשילוב הקהל בשיחה כשיבחר. מהיום אתה חלק מקבוצות האייקונים האהובים עליך."
     },
     "chat": {
         "messageInputHint": "הקלד/י הודעה",
-        "welcomeTitle": "ברוך הבא ל {}",
+        "welcomeTitle": "Welcome to {}",
         "welcomeContent": "איזה כיף! הצטרפת לקבוצה הראשונה שלך.\nבקבוצות תיחשף לשיחות צ׳אט והודעות בין אייקונים.\nתוכל להגיב להודעות ולסטורי באמצעות חייכנים ואימוג׳ים.\nאתה יכול להצטרף לכל קבוצה שמעניינת אותך ואפילו לבחור לעקוב אחר אייקון ספציפי בקבוצות בהן הוא פעיל.\nאתה נכנס למימד חדש, ודא שהאייקונים ידעו שאתה שם.",
         "background": "שינוי תמונת רקע",
         "chooseColor": "בחר/י צבע רקע",
-        "notification": "השתקת התראות",
+        "notification": "Mute notificatons",
         "editGroup": "הוספת עורכ/ת לקבוצה",
         "exited": "יצאת מהקבוצה",
-        "exit": "יציאה מהקבוצה",
-        "becomeManager": "הפוך למנהל/ת",
-        "manager": "מנהל/ת",
+        "exit": "Exit conversation",
+        "becomeManager": "Make admin",
+        "manager": "Admin",
         "addManagers": "ניתן להוסיף עוד {} מנהלים",
-        "groupEditors": "עורכי הקבוצה"
+        "groupEditors": "Conversation Editors",
+        "joinGroupShowComments" : "כדי להציג תגובות, הצטרפ/י לקבוצה",
+        "renameHint" : "הקלד/י נושא חדש",
+        "groupNameCantBeEmpty" : "שם הקבוצה לא יכול להיות ריק"
     },
     "disconnect": {
         "content": "אנחנו נתגעגע אלייך, {} {} {} רוצה לצאת מכל הצ׳אטים שלך?"
     },
     "alerts": {
-        "empty": "אין הודעות חדשות",
-        "messages": "הודעות",
-        "cleanAll": "נקה הכל"
+        "empty": "No new messages",
+        "messages": "Messages",
+        "cleanAll": "Clear All"
     },
     "settings": {
-        "title": "הגדרות",
-        "friends": "הזמנת חברים",
-        "about": "אודות אייקון"
+        "title": "Settings",
+        "friends": "Invite friends",
+        "about": "About Icon",
+        "language" : "Language"
     },
     "story": {
-        "title": "הסיפור שלך",
-        "newStory" : "סיפור חדש",
-        "addExtraMedia" : "העלו תמונה או סרטון נוסף",
-        "addMedia" : "העלו תמונה או סרטון",
-        "uploading" : "מעלה...",
-        "video" : "וידאו"
+        "title": "Your Story",
+        "newStory": "New Story",
+        "addExtraMedia": "Add extra Photo/Video",
+        "addMedia": "Upload Photo/Video",
+        "uploading": "Uploading...",
+        "video": "Video",
+        "share" : "Share",
+        "compressing" : "Compressing video",
+        "duration" : "Story image duration",
+        "videoGallery" : "Video Gallery",
+        "gallery" : "Gallery",
+        "camera" : "Camera'"
+
 
     },
     "drawer": {
-        "groupActivity": "נתוני פעילות הקבוצה",
-        "disconnect": "להתנתק",
-        "profile": "הפרופיל שלי"
+        "groupActivity": "Statistics",
+        "disconnect": "Logout",
+        "profile": "My Profile",
+        "identifyAsIcon" : "Identify as Icon",
+        "hidden" : "Hidden conversations",
+        "settings" : "Settings"
     },
     "dialogs": {
-        "exit": "יציאה מהמערכת",
-        "disconnect": "אני רוצה להתנתק",
-        "dontDisconnect": "התחרטתי אל תנתקו אותי"
+        "exit": "Exit Icon",
+        "disconnect": "I want to logout",
+        "dontDisconnect": "Don't log me out"
     },
     "comments": {
-        "noComments": "אין עדיין תגובות",
-        "title": "תגובות",
-        "groupOpened": "קבוצה פתוחה לתגובות",
-        "open": "פתיחה",
-        "close": "סגירה"
+        "noComments": "No Comments",
+        "title": "Comments",
+        "groupOpened": "Conversation is open for comments",
+        "open": "Open",
+        "close": "Close",
+        "closed": "תגובות לא פעילות כרגע"
+    },
+    "archive": {
+        "empty": "No hidden conversations",
+        "hidden" : "Hidden conversations"
+    },
+    "description" : {
+        "hint" : "הוספ/י כיתוב…"
+    },
+    "verify" : {
+        "title" : "What is your email address?",
+        "validation" : "Check your email",
+        "welcomeTitle" : "ברוכים הבאים לתהליך ההזדהות כאייקון",
+        "nextButton" : "Send me the code",
+        "noCode" : "Didn't recieved the code",
+        "sendAgain" : "Send again"
     }
 }
