--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -18,8 +18,8 @@
         "server_error": "תקלה בשרת, אנא נסה שנית",
         "iGotIt": "הבנתי, תודה!",
         "cancel": "בטל",
-        "uploading" : "מעלה קובץ אנא המתן...",
-        "loading" : "טוען...",
+        "uploading" : "מעלה קובץ אנא המתן",
+        "loading" : "טוען",
         "close" : "סגור"
     },
     "home": {
@@ -64,6 +64,7 @@
         "content": "ברוך הבא ל-Icon! אצלנו תהיה חלק מקהילות\nועולמות תוכן המדברים אליך. קבוצות הצ'אט שלנו מנוהלות\nעל ידי אייקונים, מובילי דעה ויוצרי תוכן המובילים בתחומם\nהקהל הרחב יוכל לצפות בשיחות המתקיימות 24/7 ולהגיב באמצעות חייכנים. מנהל הקבוצה יוכל לפתוח את הקבוצה לשילוב הקהל בשיחה כשיבחר. מהיום אתה חלק מקבוצות האייקונים האהובים עליך."
     },
     "chat": {
+        "appbarSubtitle" : "אייקונים {}, עוקבים {}",
         "messageInputHint": "הקלד/י הודעה",
         "welcomeTitle": "ברוך הבא ל {}",
         "welcomeContent": "איזה כיף! הצטרפת לקבוצה הראשונה שלך.\nבקבוצות תיחשף לשיחות צ׳אט והודעות בין אייקונים.\nתוכל להגיב להודעות ולסטורי באמצעות חייכנים ואימוג׳ים.\nאתה יכול להצטרף לכל קבוצה שמעניינת אותך ואפילו לבחור לעקוב אחר אייקון ספציפי בקבוצות בהן הוא פעיל.\nאתה נכנס למימד חדש, ודא שהאייקונים ידעו שאתה שם.",
