--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -11,8 +11,8 @@
     "search": {
         "empty_state": "We can't find, try typing something else.",
         "showAll": "Show all",
-        "searchCategory": "Search category",
-        "searchIcon": "Search Icon"
+        "searchCategoryHint": "search category",
+        "serachIconHint": "search icon"
     },
     "general": {
         "server_error": "Server error, please try again",
@@ -28,6 +28,7 @@
         "media": "media"
     },
     "onboarding": {
+        "phoneNumberHint" : "what is your number?",
         "phoneTitle": "Before we start we need your phone\nso we can send you a PIN code.",
         "phoneSubtitle": "What is your phone number?",
         "enterCode": "Enter the PIN code from the SMS",
@@ -64,7 +65,7 @@
         "content": "ברוך הבא ל-Icon! אצלנו תהיה חלק מקהילות\nועולמות תוכן המדברים אליך. קבוצות הצ'אט שלנו מנוהלות\nעל ידי אייקונים, מובילי דעה ויוצרי תוכן המובילים בתחומם\nהקהל הרחב יוכל לצפות בשיחות המתקיימות 24/7 ולהגיב באמצעות חייכנים. מנהל הקבוצה יוכל לפתוח את הקבוצה לשילוב הקהל בשיחה כשיבחר. מהיום אתה חלק מקבוצות האייקונים האהובים עליך."
     },
     "chat": {
-        "appbarSubtitle": "Icons {}, Followers {}",
+        "appbarSubtitle": "{} Icons,{} Followers",
         "messageInputHint": "type a message",
         "welcomeTitle": "Welcome to {}",
         "welcomeContent": "איזה כיף! הצטרפת לקבוצה הראשונה שלך.\nבקבוצות תיחשף לשיחות צ׳אט והודעות בין אייקונים.\nתוכל להגיב להודעות ולסטורי באמצעות חייכנים ואימוג׳ים.\nאתה יכול להצטרף לכל קבוצה שמעניינת אותך ואפילו לבחור לעקוב אחר אייקון ספציפי בקבוצות בהן הוא פעיל.\nאתה נכנס למימד חדש, ודא שהאייקונים ידעו שאתה שם.",
@@ -98,23 +99,24 @@
     },
     "story": {
         "title": "Your Story",
-        "newStory": "New Story",
-        "addExtraMedia": "Add extra Photo/Video",
-        "addMedia": "Upload Photo/Video",
+        "newStory": "new ntory",
+        "addExtraMedia": "add extra photo or video",
+        "addMedia": "upload a photo or aideo",
         "uploading": "Uploading",
         "video": "Video",
         "share": "Share",
         "compressing": "Compressing video",
         "duration": "Story image duration",
-        "videoGallery": "Video Gallery",
+        "videoGallery": "Video gallery",
         "gallery": "Gallery",
-        "camera": "Camera'"
+        "camera": "Camera",
+        "videoCamera" : "Video camera"
     },
     "drawer": {
         "groupActivity": "Statistics",
         "disconnect": "Logout",
-        "profile": "My Profile",
-        "identifyAsIcon": "Identify as Icon",
+        "profile": "My profile",
+        "identifyAsIcon": "Identify as ICON",
         "hidden": "Hidden conversations",
         "settings": "Settings"
     },
@@ -145,5 +147,12 @@
         "nextButton": "Send me the code",
         "noCode": "Didn't recieved the code",
         "sendAgain": "Send again"
+    },
+    
+    "fab" : {
+        "create" : "new group",
+        "media" : "media",
+        "list" : "list",
+        "staggered" : "block"
     }
 }
