--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -68,6 +68,8 @@
         "content": "ברוך הבא ל-Icon! אצלנו תהיה חלק מקהילות\nועולמות תוכן המדברים אליך. קבוצות הצ'אט שלנו מנוהלות\nעל ידי אייקונים, מובילי דעה ויוצרי תוכן המובילים בתחומם\nהקהל הרחב יוכל לצפות בשיחות המתקיימות 24/7 ולהגיב באמצעות חייכנים. מנהל הקבוצה יוכל לפתוח את הקבוצה לשילוב הקהל בשיחה כשיבחר. מהיום אתה חלק מקבוצות האייקונים האהובים עליך."
     },
     "chat": {
+        "messageDeleted" : "הודעה נמחקה",
+        "deleteMessage" : "מחק הודעה",
         "subsribe": "הצטרפות לקבוצה",
         "viewerPanel": "רק מנהלי קבוצה יכולים לשלוח הודעה",
         "join": "כדי להגיב להודעות הצטרף/י לקבוצה",
@@ -162,5 +164,9 @@
         "media": "מדיה",
         "list": "רשימה",
         "staggered": "בלוקים"
+    },
+    "filter" : {
+        "foryou" : "בשבילך",
+        "popular" : "פופואלרי"
     }
 }
